# AlgorithmWorkFlowTools

./: AWF.h  AlgorithmLoggerPlotTester.cpp  AlgorithmLoggerTester.cpp  CMakeLists.txt  DataDisplay2DTester.cpp  FileTester.cpp  FunctionToolTester.cpp  OnlineDrawInterfaceTester.cpp  cmake_backup
AlgorithmLogger/: AbstractEvent.h  AbstractMsg.cpp  AbstractMsg.h  AlgorithmLogger.cpp  AlgorithmLogger.h  Event.cpp  Event.h  EventListener.cpp  EventListener.h
AuxModule/: TcpSever.py  __init__.py
DataVisualizeTools/: DataDisplay2D.h  DataDisplayAbstract.h
ExtentedIO/: FileReader.cpp  FileReader.h  FileTester.cpp  FileWriter.cpp  FileWriter.h  ThreadSafeOStream.cpp  ThreadSafeOStream.h  WriteToCsv.h
MathTools/: FunctionAbstract.cpp  FunctionAbstract.h  SimpleTestFunction.cpp  SimpleTestFunction.h  SingleInFunction.h  SpeicalFunctionAbstract.h
Test/: AlgorithmLoggerTester.cpp  FileTester.cpp  catch.hpp
UsefulScript/: LoggerFiltPloter.py  LoggerFiltPloterQt.py  __init__.py
UsefulTools/: DataOnlineDisplay.h  ErrorTools.h  OnlineDrawFunction.h  ParameterManager.h  TimeTools.h  matplotlibcpp.h
